@@ -22,6 +22,7 @@ Changes in progress
 - WSL: Upgraded to version 2.3.0 (Trello #1035)
 - Fixed bug with searching members or groups box (Trello #1216)
 - Grup-Classe: Added Email subscribers integration to Grup-Classe widget (GitHub #193)
+- Reactor: Added description link (Trello #1218)
 
 
 Changes 16.03.30
